# InvestmentInsight

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
data/: sample_nav.csv
src/app/: config.py  main.py
src/app/data_sources/: loader.py
src/app/indicators/: __init__.py  technical.py
src/app/models/: __init__.py  responses.py
src/app/services/: analytics_service.py
streamlit_app/: app.py
streamlit_app/utils/: chart_helper.py  correlation_helper.py  gpt_analysis.py  gsheet_helper.py  news_feed.py  slack_notifier.py
tests/: test_data_loader.py
